--- a/vinyl.html
+++ b/vinyl.html
@@ -2,23 +2,21 @@
 <!--This website template was created by: Shannon Bennett  April 29, 2023 -->
 <html lang="en">
 <head>
-
 	<title>Me Time Creations</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="images/me-time-favicon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/me-time-favicon.png">
+	<link rel="stylesheet" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\css\style.css">
+	<link rel="shortcut icon" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\me-time-favicon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\me-time-favicon.png">
 	
-
 </head>
 <body>
 
-	
 	<div id="container">
+
 		<header>
-				<a href="index.html"><img src="images/Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
+			
+			<a href="index.html"><img src="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
 		</header>
-	
 		
 		<nav>
 			<ul>
@@ -31,24 +29,11 @@
 			</ul>
 		</nav>
 		
-		<!--Hero Image-->
-		<div id="hero">
-			<img src="images/hero-image-horizontal.jpg" alt="black and green quilt">
-		</div>
-		
 		<main>
 		
-			<div id="intro">
-		
-				<p>Welcome to Me Time Creations!  </p>
-				<p>I love creating vinyl projects using my Cricut as well as sewing quilts together, in particular, T-shirt quilts!</p>
-				<p>Creating new designs and new projects is really fun!</p>
-				<p>Look around the site and see if something catches your eye!</p>
-				<p>Have an idea for something you don't see here?  Let's talk!</p>
-				
-				
+			<div>
 			</div>
-			
+		
 		</main>
 		
 		<footer>
@@ -56,7 +41,7 @@
 			<p><a href="mailto:metimecreations@yahoo.com">metimecreation@yahoo.com</a></p>
 			
 		</footer>
-		
+	
 	</div>
 	
 </body>
