--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Me Time Creations</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\css\style.css">
-	<link rel="shortcut icon" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\me-time-favicon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\me-time-favicon.png">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="images/me-time-favicon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/me-time-favicon.png">
 	
 </head>
 <body>
@@ -15,7 +15,7 @@
 
 		<header>
 			
-			<a href="index.html"><img src="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
+			<a href="index.html"><img src="images/Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
 		</header>
 		
 		<nav>
