--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Me Time Creations</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\css\style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
 
 		<header>
 			
-			<a href="index.html"><img src="C:\Users\shami\OneDrive\Intro to Web Design\Me Time Creations\images\Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
+			<a href="index.html"><img src="images/Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
 		</header>
 		
 		<nav>
