--- a/t-shirt-quilts.html
+++ b/t-shirt-quilts.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="images/me-time-favicon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/me-time-favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Lato&display=swap" rel="stylesheet">
+	
 	
 </head>
 <body>
@@ -38,7 +41,7 @@
 		
 		<footer>
 			<p>&copy; Copyright 2023.  All Rights Reserved.</p>
-			<p><a href="mailto:metimecreations@yahoo.com">metimecreation@yahoo.com</a></p>
+			<p><a href="mailto:metimecreations@yahoo.com">metimecreations@yahoo.com</a></p>
 			
 		</footer>
 	
