--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="images/me-time-favicon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/me-time-favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Lato&display=swap" rel="stylesheet">
 	
 </head>
 <body>
@@ -33,12 +35,13 @@
 		
 			<div id="contact">
 			
-				<h2>Have an idea for a project?  Let's get it made!</h2>
-				<h4>Call me: (425)- 941-4038</h4>
-				<h4>Email me: <a href="mailto:metimecreations@yahoo.com">metimecreations@yahoo.com</a></h4>
-				<h4>Near  Duvall, WA?  Let's meet up!</h4>
+				<h2>Have an idea for a project?</h2>  
+				<h2>Let's get it made!</h2>
+				<h4><span class="action">Call me:</span> <a href="tel:4259414038" class="tel-link">(425)- 941-4038</a></h4>
+				<h4><span class="action">Email me:</span> <a href="mailto:metimecreations@yahoo.com" class="contact-email-link">metimecreations@yahoo.com</a></h4>
+				<h4><span class="action">Near  Duvall, WA?  Let's meet up!</span></h4>
 				
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121416.29314423924!2d-122.07637806310812!3d47.74369503615737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900ac5c8d571df%3A0xc73986cc56f4c3fc!2sDuvall%2C%20WA%2098019!5e0!3m2!1sen!2sus!4v1684715533587!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121416.29314423924!2d-122.07637806310812!3d47.74369503615737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54900ac5c8d571df%3A0xc73986cc56f4c3fc!2sDuvall%2C%20WA%2098019!5e0!3m2!1sen!2sus!4v1684715533587!5m2!1sen!2sus" width="600" height="450"  allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
 			</div>
 		
 		</main>
