--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="images/me-time-favicon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/me-time-favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Lato&display=swap" rel="stylesheet">
 	
-
 </head>
 <body>
 
@@ -32,13 +33,25 @@
 		</nav>
 		
 		<!--Hero Image-->
-		<div id="hero">
+		<div id="hero" class="tablet-desktop">
 			<img src="images/hero-image-horizontal.jpg" alt="black and green quilt">
 		</div>
 		
 		<main>
 		
-			<div id="intro">
+			<div class="mobile">
+				<p>Thanks for stopping by~</p> 
+				<p><span class="emphasis">Me Time Creations!</span></p>
+				<p>I specialize in creating~</p>
+				<ul class="specialties">
+					<li>Custom Vinyl</li>
+					<li>T-shirt Quilts</li>
+					<li>Other crafty projects</li>
+				</ul>
+				
+			</div>
+			
+			<div class="tablet-desktop">
 		
 				<p>Welcome to Me Time Creations!  </p>
 				<p>I love creating vinyl projects using my Cricut as well as sewing quilts together, in particular, T-shirt quilts!</p>
@@ -53,7 +66,7 @@
 		
 		<footer>
 			<p>&copy; Copyright 2023.  All Rights Reserved.</p>
-			<p><a href="mailto:metimecreations@yahoo.com">metimecreation@yahoo.com</a></p>
+			<p><a href="mailto:metimecreations@yahoo.com">metimecreations@yahoo.com</a></p>
 			
 		</footer>
 		
