--- a/template.html
+++ b/template.html
@@ -5,6 +5,9 @@
 	<title>Me Time Creations</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Lato&display=swap" rel="stylesheet">
+	
 </head>
 <body>
 
@@ -35,7 +38,7 @@
 		
 		<footer>
 			<p>&copy; Copyright 2023.  All Rights Reserved.</p>
-			<p><a href="mailto:metimecreations@yahoo.com">metimecreation@yahoo.com</a></p>
+			<p><a href="mailto:metimecreations@yahoo.com">metimecreations@yahoo.com</a></p>
 			
 		</footer>
 	
