--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
 			
 				<h2>Have an idea for a project?</h2>  
 				<h2>Let's get it made!</h2>
-				<h4><span class="action">Call me:</span> <a href="tel:4259414038" class="tel-link">(425)- 941-4038</a></h4>
+				<h4><span class="action">Call me:</span> <a href="tel:4259414038" class="mobile tel-link">(425)- 941-4038</a></h4>
+				<h4 class="tablet-desktop tel-num">(425) 941-4038</h4>
 				<h4><span class="action">Email me:</span> <a href="mailto:metimecreations@yahoo.com" class="contact-email-link">metimecreations@yahoo.com</a></h4>
 				<h4><span class="action">Near  Duvall, WA?  Let's meet up!</span></h4>
 				
