background and nave changes

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 	
 	<div id="container">
 		<header>
-				<a href="index.html"><img src="images/Me-Time-Logo.jpg" alt="Me Time Creations Logo"></a>
+				<a href="index.html"><img src="images/Me-Time-Logo-black.png" alt="Me Time Creations Logo"></a>
 		</header>
 	
 		
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About the Creator</a></li> 
+				<li><a href="about.html">About</a></li> 
 				<li><a href="t-shirt-quilts.html">T-shirt Quilts</a></li> 
-				<li><a href="vinyl.html">Vinyl Creations</a></li> 
+				<li><a href="vinyl.html">Vinyl</a></li> 
 				<li><a href="other-projects.html">Other Projects</a></li> 
-				<li><a href="contact.html">Contact Me</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		
