--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
 		<main>
 		
 			<div class="mobile">
-				<p>Thanks for stopping by~</p> 
+				<p>Thanks for stopping by</p> 
 				<p><span class="emphasis">Me Time Creations!</span></p>
-				<p>I specialize in creating~</p>
+				<p>I specialize in creating</p>
 				<ul class="specialties">
 					<li>Custom Vinyl</li>
 					<li>T-shirt Quilts</li>
 					<li>Other crafty projects</li>
 				</ul>
-				
+				<p>I love creating vinyl projects using my Cricut as well as sewing quilts together, in particular, T-shirt quilts!</p>
+				<p>Creating new designs and new projects is really fun!</p>
+				<p>Look around the site and see if something catches your eye!</p>
+				<p>Have an idea for something you don't see here?  Let's talk!</p>
 			</div>
 			
 			<div class="tablet-desktop">
